# fortis-crypto-wallet

./: .gitignore  ADVANCED_FEATURES.md  CLEANUP_SUMMARY.md  COMPLEX_FILES_ANALYSIS.md  Cargo.toml  IMPROVEMENT_PLAN.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  SUMMARY.md  setup.sh
backend/: CMakeLists.txt  schema.sql
backend/include/: cli.h  crypto.h  database.h  email_service.h  error.h  network.h  storage.h  trading.h  wallet.h  web_server.h
backend/src/: cli.cpp  crypto.cpp  database.cpp  database_manager.cpp  email_service.cpp  error.cpp  main.cpp  migrations.cpp  network.cpp  storage.cpp  trading.cpp  wallet.cpp  web_server.cpp
config/: database.env  development.env  mail.env  production.env
docs/: API.md  DEPLOYMENT.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthWrapper.tsx  Layout.tsx  LiveClock.tsx  NotificationCenter.tsx  PortfolioChart.tsx  PriceChart.tsx  Sidebar.tsx
frontend/src/components/admin/: ManagerAdminPanel.tsx  ModeratorPanel.tsx  SuperAdminPanel.tsx
frontend/src/components/settings/: GeneralSettings.tsx  SecuritySettings.tsx  SettingsLayout.tsx
frontend/src/contexts/: ThemeContext.tsx  UserContext.tsx
frontend/src/pages/: AdminDashboard.tsx  ChangePassword.tsx  Dashboard.tsx  Database.tsx  Devices.tsx  Exchange.tsx  ForgotPassword.tsx  Help.tsx  Login.tsx  NFTs.tsx  Portfolio.tsx  Preferences.tsx  Profile.tsx  Receive.tsx  Register.tsx  Send.tsx  Settings.tsx  Staking.tsx  Trading.tsx  Transactions.tsx  TwoFactorAuth.tsx  Wallet.tsx
frontend/src/services/: adminService.ts  authService.ts  databaseService.ts
python_bridge/: blockchain_client.py  requirements.txt
scripts/: build.sh  cleanup-complex-files.sh  dev.sh  install-deps.sh  restructure-project.sh  setup-database.sh  setup-email.sh  setup-postgresql.sh
src/: address_book.rs  cli.rs  crypto.rs  encryption.rs  error.rs  fee_estimation.rs  lib.rs  main.rs  network.rs  storage.rs  tests.rs  transaction.rs  wallet.rs  web_server.rs
templates/email/: login-alert.html  password-reset.html  transaction-alert.html  welcome.html
web_gui/: package.json
web_gui/src/: App.tsx
web_gui/src/contexts/: WalletContext.tsx
web_gui/src/pages/: Dashboard.tsx
